tests/snapshots/examples_fixtures/aoc__2025__aoc_day1_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day1_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day1_part2.flx:63:13
   |
63 | let steps = [trim(line) | line <- lines, trim(line) != ""]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;
== stdout ==
<not executed>
