tests/snapshots/examples_fixtures/aoc__2025__aoc_day1_part2_profile.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day1_part2_profile.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `solve`.

  examples/aoc/2025/aoc_day1_part2_profile.flx:43:9
   |
43 |         solve(rest, pos, hits)
   |         ^^^^^

Hint:
  Define it first: let solve = ...;
== stdout ==
<not executed>
