tests/snapshots/examples_fixtures/aoc__2025__aoc_day1_profile.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day1_profile.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/aoc/2025/aoc_day1_profile.flx:18:9
   |
18 |         0 - distance
   |         ^^^^^^^^^^^^
   |         ------------ this expression has type `Int and Option<Int>`

   |         ------------ operator operands are known at compile time

Note:
  expected type: numeric operands (Int or Float)
  found type: Int and Option<Int>

Help:
  These two types are not compatible.
  adjust operand types or add explicit conversion


error[E004]: Undefined Variable

I can't find a value named `parse_rotations`.

  examples/aoc/2025/aoc_day1_profile.flx:27:9
   |
27 |         parse_rotations(rest, acc)
   |         ^^^^^^^^^^^^^^^

Hint:
  Define it first: let parse_rotations = ...;

Help:
  Did you mean `parse_rotation`?


error[E004]: Undefined Variable

I can't find a value named `solve_steps`.

  examples/aoc/2025/aoc_day1_profile.flx:43:9
   |
43 |         solve_steps(rest, next_pos, hits + 1)
   |         ^^^^^^^^^^^

Hint:
  Define it first: let solve_steps = ...;

Found 3 errors.
== stdout ==
<not executed>
