tests/snapshots/examples_fixtures/aoc__2025__aoc_day1_timed.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day1_timed.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/aoc/2025/aoc_day1_timed.flx:18:9
   |
18 |         0 - distance
   |         ^^^^^^^^^^^^
   |         ------------ this expression has type `Int and Option<Int>`

   |         ------------ operator operands are known at compile time

Note:
  expected type: numeric operands (Int or Float)
  found type: Int and Option<Int>

Help:
  These two types are not compatible.
  adjust operand types or add explicit conversion


error[E004]: Undefined Variable

I can't find a value named `parse_rotations`.

  examples/aoc/2025/aoc_day1_timed.flx:27:9
   |
27 |         parse_rotations(rest, acc)
   |         ^^^^^^^^^^^^^^^

Hint:
  Define it first: let parse_rotations = ...;

Help:
  Did you mean `parse_rotation`?


error[E004]: Undefined Variable

I can't find a value named `reverse`.

  examples/aoc/2025/aoc_day1_timed.flx:36:14
   |
36 |         _ -> reverse(acc),
   |              ^^^^^^^

Hint:
  Define it first: let reverse = ...;


error[E004]: Undefined Variable

I can't find a value named `solve_steps`.

  examples/aoc/2025/aoc_day1_timed.flx:43:9
   |
43 |         solve_steps(rest, next_pos, hits + 1)
   |         ^^^^^^^^^^^

Hint:
  Define it first: let solve_steps = ...;


error[E001]: Duplicate Name

Duplicate binding: `lines` is already defined.

  examples/aoc/2025/aoc_day1_timed.flx:57:5
   |
57 |     let lines = to_list(read_lines("examples/io/aoc_day1.txt"))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/aoc/2025/aoc_day1_timed.flx:0:1
  |


error[E004]: Undefined Variable

I can't find a value named `time`.

  examples/aoc/2025/aoc_day1_timed.flx:63:24
   |
63 | let elapsed_via_time = time(run_day1)
   |                        ^^^^

Hint:
  Define it first: let time = ...;

Found 6 errors.
== stdout ==
<not executed>
