tests/snapshots/examples_fixtures/aoc__2025__aoc_day2_part2.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
assertion_line: 33
---
Fixture: examples/aoc/2025/aoc_day2_part2.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
