tests/snapshots/examples_fixtures/aoc__2025__aoc_day2_part2_profile.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day2_part2_profile.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/aoc/2025/Day2Part2.flx:7:9
  |
7 |         first(parsed_range)
  |         ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `last`.

  examples/aoc/2025/Day2Part2.flx:11:9
   |
11 |         last(parsed_range)
   |         ^^^^

Hint:
  Define it first: let last = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/Day2Part2.flx:68:16
   |
68 |             |> fold(false, /(found, r) -> if found { true } else { id_in_range(id, r) })
   |                ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/Day2Part2.flx:98:16
   |
98 |             |> fold(0, /(acc, seed) ->
   |                ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/Day2Part2.flx:117:9
    |
117 |         [parse_range_token(t)
    |         ^^^^^^^^^^^^^^^^^^^^^
118 |             | t <- read_file(path)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
119 |                 |> trim
    | ^^^^^^^^^^^^^^^^^^^^^^^
120 |                 |> split(","),
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
121 |               trim(t) != ""]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/Day2Part2.flx:125:20
    |
125 |         let ends = [range_end(r) | r <- parsed_ranges]
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/Day2Part2.flx:126:17
    |
126 |         ends |> fold(0, /(acc, x) -> if x > acc { x } else { acc })
    |                 ^^^^

Hint:
  Define it first: let fold = ...;

Found 7 errors.
== stdout ==
<not executed>
