tests/snapshots/examples_fixtures/aoc__2025__aoc_day3_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day3_haskell_style.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
