tests/snapshots/examples_fixtures/aoc__2025__aoc_day3_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day3_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day3_part1.flx:30:17
   |
30 | let non_empty = [trim(line) | line <- lines, trim(line) != ""]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day3_part1.flx:31:13
   |
31 | let bests = [max_bank_value(line) | line <- non_empty]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `sum`.

  examples/aoc/2025/aoc_day3_part1.flx:32:7
   |
32 | print(sum(bests))
   |       ^^^

Hint:
  Define it first: let sum = ...;

Found 3 errors.
== stdout ==
<not executed>
